--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,5 @@
-image: Ubuntu1804
-
+language: python
 install:
-  - pip3 install flask
-
-build: off
-
-test_script:
-  - python3 ./flaskapp/some_app.py
+ - pip3 install flask
+script:
+ - python3 ./flaskapp/some_app.py
