--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,5 @@
+language: python
 install:
-  - pip3 install flask
-
-build: off
-
-test_script:
-  - python3 ./flaskapp/some_app.py
+ - pip3 install flask
+script:
+ - py ./flaskapp/some_app.py
