--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,1 +1,10 @@
-
+install:
+- py -m venv env
+- env/Scripts/activate
+- pip install flask
+- pip install pillow
+- pip install numpy
+- pip install mlatplotlib
+- pip install -U Flask-WTF
+- pip install wtforms
+- py ./flaskapp/main.py
